<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bruno.logindesigner.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_email"
                android:drawableLeft="@mipmap/email"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_senha"
            android:hint="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_senha"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="8dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <TextView android:id="@+id/link_recuperar_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:gravity="center"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="#009688"
            android:text="@string/login"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/link_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newUser"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>
</FrameLayout>
