<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.PropriedadeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cadastrar_layout">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!--  Nome Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_cadastro_layout_nome"
            android:hint="@string/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cadastro_nome"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_cadastro_layout_email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cadastro_email"
                android:drawableLeft="@mipmap/email"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <!--  Login Label
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_login"
            android:hint="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_login"
                android:drawableLeft="@mipmap/user"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout> -->

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_cadastro_layout_senha"
            android:hint="@string/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cadastro_senha"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <!--  Confirm Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_confirmar_senha"
            android:hint="@string/confirm_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_confirmar_senha"
                android:drawableLeft="@mipmap/confirm_password"
                android:drawablePadding="15dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cadastrar"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_user"
            android:gravity="center"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>
